--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <img src="./static/images/ibrl.png">
       </div>
       <div class="container" style="width: 90%; margin: 0 auto; padding: 0px;">
-      <strong>IBRL Comparison with good (ph) demos.</strong> DGN nearly matches the performance of IBRL under optimal conditions. However, DGN outperforms IBRL with an undertrained BC reference policy. 
+      <strong>IBRL Comparison with good (ph) demos.</strong> DGN nearly matches the performance of IBRL using a well-trained BC reference policy. However, DGN outperforms IBRL with an undertrained BC reference policy. 
       </div>
 
 
